# karaoker

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  qwenasr.py
scripts/: bootstrap_local.sh  json_to_ass.py  karaoker_run.sh
scripts/patches/: sofa_compat.patch
src/karaoker/: asr_postprocess.py  cli.py  f0_flatten.py  kana.py  lyrics.py  mapping.py  mecab_kana.py  pipeline.py  pipeline_stages.py  pipeline_types.py  sofa_dict.py  textgrid_parser.py  utils.py
src/karaoker/aligner/: __init__.py  base.py  mfa.py  sofa.py
src/karaoker/kana_convert/: __init__.py  base.py  gemini.py  mecab.py  pykakasi.py
src/karaoker/pipeline/: __init__.py  stages.py  types.py
src/karaoker/transcript/: __init__.py  base.py
src/karaoker/transcript/asr/: __init__.py  base.py  gemini.py  whispercpp.py
src/karaoker/transcript/textfile/: __init__.py  base.py  lrc.py
tests/: test_asr_postprocess.py  test_audio_separator_pick.py  test_f0_flatten.py  test_gemini_backend.py  test_json_to_ass.py  test_kana.py  test_mapping.py  test_pipeline_gemini_kana_audio.py  test_silero_vad_gate.py  test_sofa_dict.py  test_sofa_external.py  test_textgrid_parser.py
